# Resource-Allocator-Client

./: .gitignore  LICENSE  README.md  pyproject.toml
package_name/: __main__.py  main.py
resource_allocator_client/: __main__.py  callback.py  client.py  main.py
tests/: test_callback.py  test_client.py  test_main.py
