[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resource_allocator_client"
version = "0.1.0"
description = "Command-line client to query the Resource-Allocator API application"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
	{name = "Bugzey", email = "radddi@abv.bg"},
]
dependencies = [
	"requests",
]

[project.optional-dependencies]
optional_dependency_name = [
]

[project.urls]
homepage = "https://github.com/Bugzey/Resource-Allocator"

[project.scripts]
resource_allocator_client = "resource_allocator_client.main:main"

[project.gui-scripts]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["*"]  # ["*"] by default
exclude = ["tests", "utils"]  # empty by default
namespaces = false  # true by default

[tool.pylint.main]
ignore = "tests"
jobs = 4

[tool.pylint."messages control"]
disable = [
	"wildcard-import",
	"trailing-newlines",
	"use-dict-literal",
]

good-names = [
	"i",
	"j",
	"k",
	"ex",
	"id",
	"Run",
	"_",
	"pd",
	"df",
	"ok",
]

[tool.flake8]
exclude = [
	"*__init__.py",
	"*__main__.py",
]
max-line-length = 100
ignore = [
	"E123", "E704", "E121", "W504", "E24", "W503", "E226", "E126", "E203"
]
verbose = true

